2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Copy the element label in
	a 'def_args' pair into the 'def_role' extra value on the 
	element.

2018-08-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Collect adjacent 
	non-whitespace elements into a 'def_aggregate' element and
	make this change in the main tree as well as in the 'def_args'
	array.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Use the same hashes in the
	main tree as in the def_args array for the arguments on a
	@def* line.  This means that delimiter characters are in their 
	own elements now.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Change the type
	of final spaces elements to 'spaces_at_end'.  This leads to
	the spaces being ignored in some output formats.
	(_next_bracketed_or_word): Remove unused.
	* tp/Texinfo/Convert/TexinfoXML.pm (_convert) <def commands>:
	Strip off a final newline.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_split_delimiters): New function.
	(_parse_def): Do not produce def_args array via an intermediate
	array of a similar format.  Use "map" with _split_delimiters to
	place [](), in separate elements, before processing the 
	arguments on the line.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_def): Reorder some code.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_split_def_args): New function.
	(_parse_def): Use "map" with _split_def_args to create the
	array of def line contents.  This does all at once what
	_next_bracketed_or_word did across all the times it was called.
	(_next_bracketed_or_word): Collect elements from the array that
	has already been processed.

2018-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (new_block_command)